objects/FinServ__WealthAppConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines Wealth configurations.</description>
    <fields>
        <fullName>FinServ__EnableBusinessReferralsMade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Business Referrals Made List and Referrals Made Summary component.</description>
        <inlineHelpText>Enable Business Referrals Made List and Referrals Made Summary component.</inlineHelpText>
        <label>Enable Business Referrals Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__EnableGroupRecordRollups__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable rolling of household__c field to records</description>
        <label>Enable Group Record Rollups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__EnableRollupSummary__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Rollup Summary calculations</description>
        <label>Enable Rollup Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__GroupRecordRollupTimestamp__c</fullName>
        <description>Timestamp for last run group record rollups job</description>
        <label>Group Record Rollup Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__InteractionUpdateFrequency__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Frequency (in minutes) with which the Last Interaction and Next Interaction dates are automatically updated.</description>
        <label>Interaction Update Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScoreCalcEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Referrer Score calculations.</description>
        <label>Enable Referrer Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__RejectedReferralStatus__c</fullName>
        <defaultValue>&quot;Closed - Not Converted&quot;</defaultValue>
        <description>The Lead Status used to identify rejected referrals.</description>
        <label>Rejected Referral Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__RollupSummaryTimestamp__c</fullName>
        <description>Timestamp for last run rollup summary job</description>
        <label>Rollup Summary Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Wealth Application Config</label>
</CustomObject>